{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "a43bc514-0413-4ec2-8333-d17cb96874f1",
            "actions": [
                {
                    "name": "PlayerActions",
                    "type": "Value",
                    "id": "ab83a6c3-e2dd-4c0a-871c-1e6f5a054293",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "e90d0c44-f222-4594-826a-ef30f6d16fac",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "874b52f5-b7da-4d49-834b-319d66877564",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d541596d-ccd8-412a-8e1b-50f23b4b1bd1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "520862a8-9358-442c-babe-804342ea8421",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8da37f3d-2fdb-43c8-9219-b87042a5d48f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ArrowKeys",
                    "id": "03730d7a-4cc7-4c68-b01c-a29fd31f64bb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4123ec1c-fe0b-40f7-8496-0a53d07a8aaa",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3fb6493b-6026-4d13-9d6a-286ad59fff72",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a3ba8e98-fc5c-43d8-a967-1d0b14887295",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "41eca548-5414-4634-ab72-3c23934babc1",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerActions",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}